--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script  type="module" src="app.js"></script>
     <title>Prší</title>
     <style>
-        body{
+        body {
             margin:0;
             display: flex;
             justify-content: center;
@@ -17,7 +17,8 @@
             width: 80vmin;
             height: 80vmin;
             border: 1px solid black;
-            position: relative
+            position: relative;
+            
         }
     </style>
 </head>
