--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             height: 80vmin;
             border: 1px solid black;
             position: relative; 
-            transform: rotateX(40deg);  
+            transform: rotateX(20deg);  
         }
         .card{
-            border: 3px solid orange;
+            border: 2px solid orange;
             transition: left 0.5s ease-in-out, top 0.5s ease-in-out, transform 0.5s ease-in-out;
             position: absolute;
             -webkit-user-select: none; /* Safari */
@@ -29,6 +29,7 @@
             user-select: none;
             cursor: pointer;
             transform: none;
+            background-color: blanchedalmond;
         }
     </style>
 </head>
