--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             user-select: none;
             cursor: pointer;
             transform: none;
-            background-color: blanchedalmond;
+            background-color: rgb(255, 231, 194);
         }
     </style>
 </head>
