--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         #container {
             margin: 0 10vmin;
             height: 80vmin;
+            width: 80vmin;
             border: 1px solid black;
             position: relative; 
             transform: rotateX(20deg);  
