--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
         }
 
         #lid {
-            width: 15vmin;
-            height: 15vmin;
+            height: 20vmin;
             background-color: rgba(255, 0, 0, 0);
             position: absolute;
-            top: 30.05vmin;
-            left: 32vmin;
+            top: 27.55vmin;
             z-index: 100;
         }
         .card{
@@ -45,7 +43,7 @@
             transform: none;
             background-color: rgb(255, 231, 194);
             line-height: 8.34vmin;
-            font-size: 1vw;
+            font-size: 1vmin;
         }
     </style>
 </head>
