--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             z-index: 100;
         }
         .card{
-            border: 2px solid orange;
-            transition: left 0.3s ease-in-out, top 0.3s ease-in-out, transform 0.5s ease-in-out;
+            border: 2px solid rgba(255, 165, 0, 0.7);
+            border-radius: 1.5vmin;
+            transition: left 0.3s ease-in-out, top 0.3s ease-in-out, transform 0.5s ease-in-out, width 0.5s ease-in-out, height 0.5s ease-in-out;
             position: absolute;
             -webkit-user-select: none; /* Safari */
             -moz-user-select: none; /* Firefox */
