--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         #lid {
             height: 20vmin;
+            width: 40vw;
             background-color: rgba(255, 0, 0, 0);
             position: absolute;
             top: 27.55vmin;
