--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            -webkit-user-select: none; /* Safari */
+            -ms-user-select: none; /* IE 10 and IE 11 */
+            user-select: none; /* Standard syntax */
         }
         #container {
             margin: 0 10vmin;
@@ -26,7 +29,7 @@
 
         #lid {
             height: 20vmin;
-            width: 40vw;
+            width: 43.2vw;
             background-color: rgba(255, 0, 0, 0);
             position: absolute;
             top: 30vmin;
@@ -37,9 +40,6 @@
             border-radius: 1.5vmin;
             transition: left 0.3s ease-in-out, top 0.3s ease-in-out, transform 0.5s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
             position: absolute;
-            -webkit-user-select: none; /* Safari */
-            -moz-user-select: none; /* Firefox */
-            -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none;
             cursor: pointer;
             transform: none;
@@ -47,10 +47,15 @@
             line-height: 8.34vmin;
             font-size: 1vmin;
         }
+
+        .title{
+            margin: 5vmin;
+            cursor: default;
+        }
     </style>
 </head>
 <body>
-    <div><h1 style="margin: 5vmin">prší mámo</h1></div>
+    <div><h1 class="title">prší mámo</h1></div>
     <div id="container">
         <div id="lid"></div>
     </div>
