--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         .card{
             border: 2px solid rgba(255, 165, 0, 0.7);
             border-radius: 1.5vmin;
-            transition: left 0.3s ease-in-out, top 0.3s ease-in-out, transform 0.5s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
+            transition: left 0.3s ease-in-out, top 0.3s ease-in-out, transform 0.5s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out, background-color 0.1s;
             position: absolute;
             user-select: none;
             cursor: pointer;
